fix overflow issue with mapbuilder modal

--- a/app/assets/stylesheets/layouts/front/map-builder-specifics.scss
+++ b/app/assets/stylesheets/layouts/front/map-builder-specifics.scss
@@ -9,5 +9,6 @@
     margin: 0 20px;
     width: 300px;
     max-height: 400px;
+    overflow: hidden;
   }
 }
